complete get and post message routes
