# openapi.yaml
@@ -216,7 +216,7 @@ paths:
         "200":
           description: Profile updated
 
-  /chat/new:
+  /chat/messages:
     post:
       parameters:
         - $ref: "#/components/parameters/BearerAuth"
@@ -226,8 +226,33 @@ paths:
           application/json:
             example:
               targetUserId: 5
+              message: "hello world"
       responses:
         "201":
           description: Created
+        "403":
+          description: Forbidden
+
+    get:
+      parameters:
+        - $ref: "#/components/parameters/BearerAuth"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            example:
+              targetUserId: 5
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              example:
+                messages:
+                  user1_id: 1
+                  user2_id: 2
+                  sender_id: 1
+                  messages: "hello world"
+                  created_at: "2026-02-20"
         "403":
           description: Forbidden
